[tool.poetry]
name = "cvrp"
version = "0.1.0"
description = ""
authors = ["ohtaman <ohtamans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PuLP = "^2.3.1"
pandas = "^1.1.4"
networkx = "^2.5"
matplotlib = "^3.3.3"
tsplib95 = "^0.7.1"
mlflow = "^1.12.1"
psutil = "^5.7.3"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
